--- a/Training/src/DialogPack/LoginDialog.form
+++ b/Training/src/DialogPack/LoginDialog.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="DialogPack.as">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="DialogPack.LoginDialog">
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="10" vgap="10">
     <margin top="15" left="15" bottom="55" right="15"/>
     <constraints>
